List of features / changes made / release notes, in reverse chronological order.
If not stated, FINUFFT is assumed (old cuFINUFFT <=1.3 is listed separately).

Master (working towards v2.5.0), 1/12/26

* Moved finufft_spread_opts.h from public-facing to private header (Barnett).
* fixed no-setpts bug in perftest/spreadtestndall, updated perftests (Barnett).
* Added real-valued function type-2 interpolation demos (Barnett, Unalmis #722)
* Added functionality for adjoint execution of FINUFFT plans (Reinecke #633,
  addresses #566 and #571).
  Work arrays are now only allocated during plan execution, reducing overall
  memory consumption.
  A single plan can now safely be executed by several threads concurrently.
* Using c++17 template dispatching for kernels dispatch logic in one place
  (Barbone, Wentzell #719 addresses #696 & #476).
* The update overhauls the CMake and MATLAB/CUDA build system for better
  consistency and performance. It simplifies and unifies configuration,
  adds developer tools such as cppcheck, IWYU, and clang-tidy, and introduces
  proper LTO support. The CI pipeline is cleaner and faster, with improved
  cross-platform compatibility across Linux, Windows, and macOS.
  Dependencies are updated, MATLAB and CUDA integration is fixed,
  and reliance on MATLAB OpenMP is removed with revised CUDA/MEX handling.
  The update also corrects typos, warnings, deployment issues,
  adds Fortran to CI, and brings support for CMake 4 and CUDA 13.
  CI generates matlab finufft and cufinufft artifacts now.
  Now needs cmake>3.24 (Barbone #721)
* cmake: cache query and result for supported compiler flags to speed up
  configuration (Stanimirov #725).
* move include/common to include/finufft_common (Stanimirov #734)
* Fixed symbol visibility issues so shared libraries export the Fortran wrapper
  entry points and test helpers consistently on Windows and macOS.  This
  included tightening default visibility in the makefile, introducing