@@ -16,8 +16,8 @@ dim = 1; Ntot = 30;   % which dimensionality to test, tot #modes
 ntr = 10;             % #transforms to average error over
 isign = +1;
 o.debug = 0; o.showwarn=0;        % any FINUFFT opts...
-o.upsampfac = 1.5;  %2.0  etc
-o.spread_kerformula = 0;
+o.upsampfac = 2.0;  %2.0  etc
+o.spread_kerformula = 1;
 % failure fudge factors...
 tolslack = [5.0; 5.0; 15.0];  % factors by which eps can exceed tol (3 types)
 floorslack = 20;
